<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp">

    <!-- Tombol Kembali -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/left_arrow"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_marginStart="4dp"
        android:contentDescription="Back" />

    <!-- Container untuk memastikan semua elemen berada di tengah -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:layout_marginTop="32dp">

        <!-- Logo dan Nama Aplikasi -->
        <LinearLayout
            android:id="@+id/logoContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingBottom="24dp">

            <ImageView
                android:id="@+id/logoImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/campusevologo"
                android:contentDescription="@string/app_logo_desc" />

            <TextView
                android:id="@+id/appNameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="24sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/appDescriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_description"
                android:textSize="16sp"
                android:paddingTop="8dp"
                android:paddingBottom="24dp"
                android:textColor="@color/black" />
        </LinearLayout>

        <!-- Form Login -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/edittext_background" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:background="@drawable/edittext_background"
                    android:layout_marginTop="16dp" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:text="@string/login"
                    android:backgroundTint="@color/purple_500"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="24dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Link Lupa Kata Sandi -->
        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="16dp"
            android:clickable="true" />

        <!-- Link Registrasi -->
        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="Belum punya akun? Daftar di sini"
            android:textColor="@color/blue"
            android:layout_below="@id/tvForgotPassword"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingTop="16dp"
            android:clickable="true" />

    </LinearLayout>
</RelativeLayout>
