<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/rounded_rectangle"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:background="@drawable/header_background"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="-10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_button"
            android:onClick="navigateToDashboard"
            android:src="@drawable/ic_back"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/tvAboutTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Tentang Kami"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/tvAboutSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAboutTitle"
            android:layout_centerHorizontal="true"
            android:text="CampusEvo"
            android:textSize="20sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginTop="16dp"
        android:background="@drawable/border_box">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="16dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <ImageButton
                    android:id="@+id/btnPrev"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_chevron_left"
                    android:contentDescription="@string/previous_button" />

                <ImageButton
                    android:id="@+id/btnNext"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_chevron_right"
                    android:contentDescription="@string/next_button" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tvAboutDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:padding="8dp"
                android:text="@string/about_description" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
